--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
-  "devDependencies": {
-    "@types/node": "^20.11.17",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "prisma": "^5.9.1"
-  }
+	"name": "puraesencia-backend",
+	"version": "1.0.0",
+	"description": "El backend para el sistema de puraesencia",
+	"main": "app.js",
+	"type": "module",
+	"author": "Krapp Ramiro",
+	"license": "ISC",
+	"scripts": {
+		"build": "npx tsc",
+		"start": "node dist/app.js",
+		"dev": "tsx watch app.ts"
+	},
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.3",
+		"express": "^4.18.2",
+		"prisma": "^5.9.1",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.11.17",
+		"tsx": "^4.7.1",
+		"typescript": "^5.3.3"
+	}
 }
