--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"dev": "tsx watch app.ts"
 	},
 	"dependencies": {
+		"@prisma/client": "^5.9.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.3",
 		"express": "^4.18.2",
