--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
 	"scripts": {
 		"build": "npx tsc",
 		"start": "node dist/app.js",
-		"dev": "tsx watch app.ts"
+		"dev": "tsx watch app.ts",
+		"prisma:generate": "npx prisma generate"
 	},
 	"dependencies": {
-		"@prisma/client": "^5.9.1",
+		"@prisma/client": "^5.10.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.3",
 		"express": "^4.18.2",
-		"prisma": "^5.9.1",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.11.17",
+		"prisma": "^5.10.2",
 		"tsx": "^4.7.1",
 		"typescript": "^5.3.3"
 	}
