--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
 	"type": "module",
 	"author": "Krapp Ramiro",
 	"license": "ISC",
+	"engines": {
+		"node": ">=20.0.0 <21.0.0",
+		"npm": ">=10.0.0 <11.0.0"
+	},
 	"scripts": {
 		"build": "npx tsc",
 		"start": "node dist/app.js",
