--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.11.17",
 		"prisma": "^5.10.2",
