--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "1.0.0",
 	"description": "El backend para el sistema de puraesencia",
 	"main": "app.js",
-	"type": "module",
 	"author": "Krapp Ramiro",
 	"license": "ISC",
 	"engines": {
@@ -12,8 +11,9 @@
 	},
 	"scripts": {
 		"build": "npx tsc",
-		"start": "node dist/app.js",
-		"dev": "tsx watch app.ts",
+		"start": "node dist/run-server.js",
+		"dev": "nodemon ./src/run-server.ts",
+		"test": "jest --coverage",
 		"prisma:generate": "npx prisma generate"
 	},
 	"dependencies": {
@@ -26,9 +26,15 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.17",
+		"@types/supertest": "^6.0.2",
+		"jest": "^29.7.0",
+		"nodemon": "^3.1.0",
 		"prisma": "^5.10.2",
-		"tsx": "^4.7.1",
-		"typescript": "^5.3.3"
+		"supertest": "^6.3.4",
+		"ts-jest": "^29.1.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.3"
 	}
 }
